# binbuddy

./: .gitignore  CHANGELOG.md  README.md  deploy.sh  git.pub  gitkey  gitkey.pub
bootstrap/: bootstrap.sh  bootstrap_base_crane.sh  bootstrap_bringup.sh  bootstrap_description.sh  bootstrap_interfaces.sh  bootstrap_navigation_slam.sh  bootstrap_sensing.sh  bootstrap_teleop_nlp.sh
config/: .env.example
docs/: QUICKSTART.md  TESTING.md
ros2_ws/src/crane_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/crane_control/crane_control/: crane_controller.py
ros2_ws/src/robot_base/: package.xml  setup.py
ros2_ws/src/robot_base/robot_base/: base_controller.py
ros2_ws/src/robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/robot_bringup/launch/: bringup.launch.py
ros2_ws/src/robot_bringup/rviz/: binbuddy.rviz
ros2_ws/src/robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/robot_description/launch/: state_publisher.launch.py
ros2_ws/src/robot_description/urdf/: binbuddy.urdf.xacro
ros2_ws/src/robot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/robot_interfaces/action/: MoveCrane.action
ros2_ws/src/robot_interfaces/msg/: CraneState.msg  SystemHealth.msg
ros2_ws/src/robot_interfaces/srv/: CameraCommand.srv  CraneCommand.srv  NLPCommand.srv  SetMode.srv
ros2_ws/src/robot_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/robot_navigation/config/: nav2_params.yaml
ros2_ws/src/robot_navigation/maps/: example_map.pgm  example_map.yaml
ros2_ws/src/robot_nlp/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_nlp/robot_nlp/: nlp_commander.py
ros2_ws/src/robot_sensing/: package.xml  setup.py
ros2_ws/src/robot_sensing/robot_sensing/: camera_manager.py
ros2_ws/src/robot_slam/: CMakeLists.txt  package.xml
ros2_ws/src/robot_slam/config/: slam_toolbox_params.yaml
ros2_ws/src/robot_teleop/: package.xml  setup.py
ros2_ws/src/robot_teleop/robot_teleop/: binbuddy_teleop.py
scripts/: checksum_manager.sh  detect_arduino.sh  install_dependencies.sh  rollback.sh  setup_cameras.sh  setup_udev_rules.sh  smart_update.sh  test_system.sh  version_manager.sh
