<?xml version="1.0"?>
<package format="3">
  <name>robot_nlp</name>
  <version>1.0.0</version>
  <description>Natural language command interface using ChatGPT</description>
  <maintainer email="evyatarbeni@gmail.com">Evyatar Beni</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>robot_interfaces</depend>
  <export><build_type>ament_python</build_type></export>
</package>
