<?xml version="1.0"?>
<package format="3">
  <name>robot_sensing</name>
  <version>1.0.0</version>
  <description>Camera manager and LiDAR integration</description>
  <maintainer email="evyatarbeni@gmail.com">Evyatar Beni</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>robot_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
