<?xml version="1.0"?>
<package format="3">
  <name>robot_slam</name>
  <version>1.0.0</version>
  <description>SLAM configuration for BinBuddy</description>
  <maintainer email="evyatarbeni@gmail.com">Evyatar Beni</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
